<resources>
    <string name="app_name">Smartpump</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Logout</string>
    <string name="title_notifications">Notifications</string>
    <string name="hint_mobile">Enter mobile number </string>
    <string name="title_mobile">Enter mobile number </string>
    <string name="hint_pwd">Enter Password</string>
    <string name="tittle_pwd">Password</string>
    <string name="login">Login</string>
    <string name="forgot_pwd"><u>Forgot Password?</u></string>
    <string name="sign_up">Don\'t have an account ?Sign up</string>
    <string name="all_device">All Devices</string>
    <string name="DeviceNo">Device No.</string>
    <string name="middle">Middle</string>
    <string name="DeviceKey">Device Key</string>
    <string name="DeviceName">Device Name</string>
    <string name="ULimit">ULimit</string>
    <string name="LLimit">LLimit</string>
    <string name="CkLimit">CkLimit</string>
    <string name="TypeID">TypeID</string>
    <string name="zip">Zip</string>
    <string name="state">State</string>
    <string name="email">Email</string>
    <string name="off">OFF</string>
    <string name="license_number">License Number</string>
    <string name="rfid">RFID#</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="confirmation">Confirmation</string>
    <string name="conf_ms">Are you sure to want delete device </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_ddevice_details">DdeviceDetailsActivity</string>
    <string name="tag_on">On</string>
    <string name="tag_off">Off</string>
    <string name="nav_auto">Auto</string>
    <string name="nav_timer">Timer</string>
    <string name="setting">Setting</string>
    <string name="push_notification">Push Notification</string>
    <string name="about">About</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="log_out">Log Out</string>
    <string name="netwrk_dia">Network Diagnosis</string>
    <string name="get_otp">Get OTP</string>
    <string name="verification">Verification</string>
    <string name="verify_mo_nu">Verify Mobile Number</string>
    <string name="retry">Didn\'t Receive OTP ? <u>Resend?</u></string>
    <string name="otp_send">OTP has sent to mobile : </string>
    <string name="submit">Submit</string>

</resources>
