<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            style="@style/tv_medium_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/title_mobile"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_id"
            android:drawablePadding="10dp"
            android:hint="@string/hint_mobile" />

        <TextView
            style="@style/tv_medium_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tittle_pwd"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/hint_pwd" />

        <Button

            android:id="@+id/btn_login"
            style="@style/button_selectable"
            android:layout_marginTop="40dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tv_forgot_pwd"
            style="@style/tv_medium_text"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:text="@string/forgot_pwd"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_sign_up"
            style="@style/tv_medium_text"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:text="@string/sign_up"
            android:textColor="@android:color/black" />
    </LinearLayout>
</ScrollView>
