<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            style="@style/tv_large_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verify_mo_nu"
            android:textColor="@android:color/darker_gray" />

        <TextView

            style="@style/tv_medium_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tv_opt_mobile"
            android:text="@string/otp_send"
            android:textColor="@android:color/darker_gray" />

        <com.iot.smartpump.utils.PinEntryEditText
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            style="@style/edittext"
            android:id="@+id/ed_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_retry"
            style="@style/tv_medium_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/retry"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_verify_otp"
            style="@style/button"
            android:layout_marginTop="30dp"
            android:padding="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/submit"
            />
    </LinearLayout>

</LinearLayout>
