<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/header_setting" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:padding="10dp"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/setting"
                    android:textColor="@android:color/black"
                    style="@style/tv_medium_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/push_notification"
                    android:textColor="@android:color/black"
                    style="@style/tv_medium_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8" />
                <ImageView
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_arrow_right"
                    android:layout_width="32dp"
                    android:layout_height="32dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/about"
                    android:textColor="@android:color/black"
                    style="@style/tv_medium_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8" />
                <ImageView
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_arrow_right"
                    android:layout_width="32dp"
                    android:layout_height="32dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/netwrk_dia"
                    android:textColor="@android:color/black"
                    style="@style/tv_medium_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8" />
                <ImageView
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_arrow_right"
                    android:layout_width="32dp"
                    android:layout_height="32dp"/>
            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/clear_cache"
                    android:textColor="@android:color/black"
                    style="@style/tv_medium_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8" />
                <ImageView
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_arrow_right"
                    android:layout_width="32dp"
                    android:layout_height="32dp"/>
            </LinearLayout>


                <TextView
                    android:layout_marginTop="30dp"
                    android:background="@android:color/white"
                    android:padding="10dp"
                    android:text="@string/log_out"
                    android:textColor="@android:color/black"
                    style="@style/tv_medium_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                 />


        </LinearLayout>
    </ScrollView>

</LinearLayout>