<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alertTitle"
                style="@style/tv_medium_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8" />

            <ImageView
                android:id="@+id/img_cancel"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/ic_cancel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/TextInputLayoutAppearance" />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/TextInputLayoutAppearance" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutAppearance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:theme="@style/TextInputLayoutAppearance">

                <EditText
                    android:id="@+id/ed_ulimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ULimit"
                    android:inputType="number"
                    android:textColor="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/tv_medium_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="(in cm)" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:theme="@style/TextInputLayoutAppearance">

                <EditText
                    android:id="@+id/ed_llimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/LLimit"
                    android:inputType="number"
                    android:textColor="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/tv_medium_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="(in cm)" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grid_background"
            android:orientation="vertical"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <!--                        <LinearLayout-->
                <!--                                android:layout_width="0dp"-->
                <!--                                android:layout_height="match_parent"-->
                <!--                                android:layout_weight="1"-->
                <!--                                android:orientation="vertical">-->

                <!--                            <TextView-->
                <!--                                    style="@style/HintText"-->
                <!--                                    android:layout_width="match_parent"-->
                <!--                                    android:layout_height="wrap_content"-->
                <!--                                    android:gravity="left"-->

                <!--                                    android:text="License State" />-->

                <!--                            <Spinner-->

                <!--                                    android:id="@+id/sp_licence_state"-->
                <!--                                    android:layout_width="match_parent"-->
                <!--                                    android:layout_height="match_parent"-->
                <!--                                    android:layout_gravity="center_vertical"-->
                <!--                                    android:gravity="center_vertical"-->
                <!--                                    android:prompt="@string/spinner_lic_title" />-->
                <!--                        </LinearLayout>-->


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:theme="@style/TextInputLayoutAppearance" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save"
                style="@style/button_selectable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/dimen_10"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/update"
                android:textAllCaps="true" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
